testcases/bad/test26.tig
/* Error: integer required */

3 + "var"
